# Brainfuck

./: README.md  brainfuck.cabal  cabal.sandbox.config  input4.brain  input4.brain.bfc
haskell/: README.md  todo.org
haskell/example_programs/: example.bf  hello_world_trigger.bf  hello_world_trigger.bf.bfc
haskell/src/lib/Brainfuck/Compiler/: Application.hs  Compiler.hs
haskell/src/lib/Brainfuck/Compiler/Backend/CodeGeneration/VM/StackMachine/: Bytecode.hs  StackMachine.hs
haskell/src/lib/Brainfuck/Compiler/Backend/Optimization/: Optimizer.hs
haskell/src/lib/Brainfuck/Compiler/Frontend/Lexer/: Types.hs
haskell/src/lib/Brainfuck/Compiler/Frontend/Parser/: Parser.hs
haskell/src/lib/Brainfuck/VM/StackMachine/: Machine.hs
haskell/test/Brainfuck/Compiler/Backend/CodeGeneration/VM/StackMachine/: BytecodeSpec.hs  StackMachineSpec.hs
haskell/test/Brainfuck/Compiler/Frontend/Parser/: ParserSpec.hs
racket/: README.md  brainfuck.rkt
src/bfc/: Main.hs
src/bfvm/stack/: Main.hs
src/lib/Brainfuck/Compiler/Backend/: Readme.md
src/lib/Brainfuck/Compiler/Backend/CodeGeneration/: Readme.md
src/lib/Brainfuck/Compiler/Backend/CodeGeneration/VM/StackMachine/: Assembly.hs
src/lib/Brainfuck/Compiler/Frontend/: Readme.md
src/lib/Brainfuck/Compiler/Frontend/Lexer/: Lexer.hs
src/lib/Brainfuck/Compiler/Frontend/Parser/: Types.hs
src/lib/Brainfuck/Compiler/Frontend/SemanticAnalysis/: Readme.md
src/lib/Brainfuck/VM/StackMachine/: Application.hs  Testbed.hs
test/Brainfuck/Compiler/: CompilerSpec.hs
test/Brainfuck/Compiler/Frontend/Lexer/: LexerSpec.hs
test/Brainfuck/VM/StackMachine/: MachineSpec.hs
